Istio/2 Canary deployment/files/3_deployment_update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2-0
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
      version: "2.0"
  template:
    metadata:
      labels:
        app: app
        version: "2.0"
    spec:
      containers:
      - name: app
        image: cloudstateu/simpleflask:2
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: http
