Istio/2 Canary deployment/files/4_ver2_all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: app.app.svc.cluster.local
        subset: v2-0
        port:
          number: 5000
